portfoilio part i